[package]
name = "rust-multithreading"
version = "0.1.0"
edition = "2024"

[dependencies]
trpl = "0.3.0"


[[bin]]
name = "simple_sleep"
path = "src/simple_sleep.rs"

[[bin]]
name = "channels"
path = "src/channels.rs"

[[bin]]
name = "channels_shared_resource"
path = "src/channels_shared_resource.rs"

[[bin]]
name = "mutexes"
path = "src/mutexes.rs"

[[bin]]
name = "trpl"
path = "src/trpl.rs"

[[bin]]
name = "trpl-race"
path = "src/trpl-race.rs"


[[bin]]
name = "trpl-join"
path = "src/trpl-join.rs"

[[bin]]
name = "trpl-message-passing"
path = "src/trpl-message-passing.rs"

[[bin]]
name = "trpl-timeout"
path = "src/trpl-timeout.rs"

[[bin]]
name = "trpl-stream"
path = "src/trpl-stream.rs"